# chromatic-atomic-tower

./: .coveragerc  .env.example  .gitignore  AGENTS.md  CAT_MANIFEST.md  CAT_PRINCIPLES.md  CAT_ROADMAP.md  CHANGELOG.md  CHROMATIC_TREES.md  CHROMATIC_TREES.worktree.json  CONTRIBUTING.md  GOVERNANCE.md  Makefile  PDR_CAT_000_ESTABLISH_CORE_REPO.md  PDR_CAT_001_STATE_TRANSITION_ENGINE.md  PDR_CAT_002_EVIDENCE_GATE_CLOSEOUT_ENGINE.md  PDR_CAT_003_CI_GOVERNANCE_SELF_HEALING.md  PDR_CAT_004_V2_ALIGNMENT_GUARDS.md  PDR_CAT_A009_REPO_ALIGNMENT_RECONCILIATION.md  PDR_CAT_A010_GITHUB_BRIDGE_PR_GOVERNANCE.md  PDR_CAT_A011_AGENT_SCORECARD_AUTOMATION.md  QUICKSTART.md  README.md  SECURITY.md  SPRINT_001_PLAN.md  SPRINT_002_PLAN.md  SPRINT_011_PLAN.md  START_HERE.md  VERSION  pyproject.toml  requirements.txt
.agent/: harness_settings.yaml  model_routes.yaml  project_state.md  queue.json
.claude/: settings.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md  pull_request_template_harness.md
agents/: README.md  model_routes.yaml
beads/: README.md
checklists/: BEAD_IMPLEMENTATION_CHECKLIST.md  CI_CD_PROMOTION_CHECKLIST.md  CI_GOVERNANCE_CHECKLIST.md  CLOSEOUT_CHECKLIST.md  EVIDENCE_GATE_CHECKLIST.md  GITHUB_BRIDGE_CHECKLIST.md  GO_AUTOMATION_READINESS_CHECKLIST.md  HARNESS_MISSION_CLOSEOUT_CHECKLIST.md  MISSION_REVIEW_CHECKLIST.md  RECONCILIATION_CHECKLIST.md  REPO_BIRTH_CHECKLIST.md  STATE_TRANSITION_CHECKLIST.md
docs/: agent_scorecard_spec.md  agent_scorecards.md  archive_schema_reference.md  bead_closeout_engine.md  evidence_index.md  github_actions_guardrails.md  github_bridge.md  go_dispatch_packet.md  state_transition_engine.md
evidence/: README.md  manifest.yaml
gates/: README.md  assertion_gates.yaml  completeness_gate.yaml  control_validation_gate.yaml  promotion_gate.yaml  release_gate.yaml  substantive_validation_gate.yaml
learnings/: DECISION_LOG.md  ECHO_LOG.md  INCIDENT_LOG.md  MP-CAT-A007-4C01_LOGHOUSE.md  MP-CAT-A008-4C01_ALIGNMENT.md  PATTERN_LIBRARY.md
missions/: README.md
playbooks/: CAT_AUDIT_HARNESS_PLAYBOOK.md  (+20 more)
(+1429 files in other folders)
