[project]
name = "chromatic-atomic-tower"
version = "0.0.0"
description = "Mission-first, BEAD-first, evidence-first control tower for autonomous engineering."
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--tb=short"

[tool.coverage.run]
source = ["scripts"]
omit = ["tests/*", "scripts/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0
