[project]
name = "chromatic-atomic-tower"
version = "0.0.0"
description = "Mission-first, BEAD-first, evidence-first control tower for autonomous engineering."
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0",
  "PyJWT>=2.0",
  "cryptography>=3.4"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# Coverage is opt-in (run `make coverage` or `pytest --cov`), not wired into the
# default `pytest`/`make test` run. This keeps the plain test run fast and avoids
# writing a `.coverage` file into the repo root on every invocation — which the
# repo-hygiene check (scripts/cat_check_repo.py) would otherwise see mid-run when
# the CI self-test shells out to it.
[tool.coverage.run]
source = ["scripts"]
branch = true
omit = [
  "scripts/__init__.py",
  "scripts/*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Floor below the current measured coverage; raise as coverage improves.
fail_under = 55
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
